[package]
name = "wpscan-analyze"
version = "1.0.3"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Analyzes wpscan json output and checks for vulnerabilities"
repository = "https://github.com/lukaspustina/wpscan-analyze.git"
homepage = "https://github.com/lukaspustina/wpscan-analyze"
readme = "README.md"
license = "MIT"
keywords = ["cli", "wordpress", "wpscan", "security"]
edition = "2018"

[badges]
travis-ci = { repository = "lukaspustina/wpscan-analyze", branch = "master" }
codecov = { repository = "lukaspustina/wpscan-analyze", branch = "master", service = "github" }

[dependencies]
clams = "^0.0.13"
failure = "0.1"
log = "0.4"
prettytable-rs = "0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
structopt = "0.2"

[dev-dependencies]
spectral = "^0.6"
